@@ -1,6 +1,7 @@
 Changelog for the Curses::UI distribution:
 
         - Fix wide character support for Curses 1.29.
+        - Update to Module::Install 1.19.
 
 Version 0.9609
 ==============
